--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "node-example",
-  "version": "1.0.0",
+  "name": "node-bang-suggest",
+  "version": "1.1.0",
   "dependencies": {
   },
   "engines": {
-    "node": "0.8.x",
+    "node": "0.10.x",
     "npm": "1.x"
   }
 }
